--- a/Official Site/Test/Timeline_new.html
+++ b/Official Site/Test/Timeline_new.html
@@ -7,26 +7,14 @@
         <meta name="author" content="" />
         <title>Agency - Start Bootstrap Theme</title>
         <!-- Favicon-->
-        <link rel="apple-touch-icon" sizes="57x57" href="./Favicon Files/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="./Favicon Files/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="./Favicon Files/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="./Favicon Files/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="./Favicon Files/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="./Favicon Files/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="./Favicon Files/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="./Favicon Files/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="./Favicon Files/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="./Favicon Files/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./Favicon Files/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="./Favicon Files/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./Favicon Files/favicon-16x16.png">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./css/styles_timeline.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -201,7 +189,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class=" img-fluid" src="./img/aline_1st place old.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
@@ -211,7 +199,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="./img/HB_Win.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>March 2011</h4>
@@ -221,7 +209,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class=" container-fluid" src="" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>December 2015</h4>
@@ -612,7 +600,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./js/scripts_timeline.js"></script>
+        <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
